--- a/orientacao-profissional/src/index.css
+++ b/orientacao-profissional/src/index.css
@@ -3,43 +3,18 @@
     padding: 0;
     border: 0;
   }
-  
-  body, button, input, select, textarea {
-    font-family: Georgia;
-    font-size: 16px;
-    font-style: normal;
-    line-height: normal;
-    font-weight: 400;
-  }
-  
-  ul, ol {
-    list-style: none;
-  }
-  
-  a {
-    text-decoration: none;
-    color: #FFFFFF;
-  }
-  
-  img {
-    border: none;
-  }
-  
-  html, body {
-    width: 100%;
-    height: 100%;
-  }
-  
-  div, section, article, header, footer, nav {
-    display: block;
-  }
-  
+
   body {
     display: flex;
     flex-direction: column;
     background-color: dimgray;
     color: #FFFFFF;
     user-select: none; /* Evitar seleção de texto por padrão */
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 16px;
+    font-style: normal;
+    line-height: normal;
+    font-weight: 400;
   }
   
   /* SCROLL /
@@ -62,11 +37,4 @@
       background-color: #293665;
       border-radius: 10px;
       border: 1px solid #e0e0e0;
-    }
-
-    .layout{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
     }
