Adicionei uma header, e um menu de navegação

--- a/orientacao-profissional/src/componentes/menu/Menu.css
+++ b/orientacao-profissional/src/componentes/menu/Menu.css
@@ -6,4 +6,16 @@
     gap: 8px;
     align-items: center;
     color: black;
-} 
+}
+.navMenu {
+    position: absolute;
+    top: 0;
+    right:0;
+    display:flex;
+    justify-content: space-between;
+    padding:16px;
+    margin-right:16px;
+}
+.navMenu a {
+    margin-right: 16px;
+}
