--- a/orientacao-profissional/src/componentes/card_profissoes/Card_profissoes.css
+++ b/orientacao-profissional/src/componentes/card_profissoes/Card_profissoes.css
@@ -1,10 +1,10 @@
 .card_profissoes{
-    width: 350px;
-    height: 200px;
+    width: 100%;
+    height: 450px;
     border: solid 1px;
     border-color: rgb(236, 236, 236);
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 16px;
     padding: 16px;
     align-items: center;
@@ -18,4 +18,21 @@
 
 .card_profissoes > span{
     font-weight: 700;
+}
+
+.card_conteudo_pro{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    width: 300px;
+    padding: 16px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.10);
+    background-color: rgb(255, 255, 255);
+}
+
+.sub_titulo{
+    font-size: 18px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
 }
