--- a/orientacao-profissional/src/App.css
+++ b/orientacao-profissional/src/App.css
@@ -1,4 +1,4 @@
-.flex{
+/* .flex{
   display: flex;
   flex-direction: column;
 }
@@ -10,4 +10,4 @@
   height: 580px;
   padding: 32px;
   gap: 32px;
-}
+} */
