--- a/orientacao-profissional/src/paginas/home/Home.css
+++ b/orientacao-profissional/src/paginas/home/Home.css
@@ -34,3 +34,16 @@
     color: #fff;
     cursor: pointer;
 }
+
+.container_home
+{
+    display: flex;
+    gap: 32px;
+    padding: 32px;
+    width: 100%;
+    height: 400px;
+    background: rgba(0,0,0,0.125);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
