--- a/orientacao-profissional/src/componentes/hero_section_home/Hero_section.css
+++ b/orientacao-profissional/src/componentes/hero_section_home/Hero_section.css
@@ -56,3 +56,28 @@
     /* Button01 */
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
 }
+
+.resultado_pesquisa{
+    display: flex;
+    flex-direction: column;
+    /* padding: 8px; */
+    gap: 4px;
+    font-size: 14px;
+    border-radius: 0px 0px 8px 8px ;
+    background-color: rgb(194, 194, 194);
+    /* position: absolute;
+    width: 100px; */
+}
+
+.resultado_pesquisa >span{
+    padding: 8px;
+}
+
+.resultado_pesquisa > span:hover{
+    cursor: pointer;   
+    background-color: #d3d3d3;
+}
+
+.opcoes_busca > a:hover{
+    color: rgb(64, 139, 74);
+}
