--- a/orientacao-profissional/src/componentes/carrossel/Carrossel.css
+++ b/orientacao-profissional/src/componentes/carrossel/Carrossel.css
@@ -14,13 +14,18 @@
     gap: 24px;
     align-items: center;
     width: 100%;
+    height: 300px;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    transition: scroll 0.5s ease-in-out;
+    padding-left: 8px; 
 }
 
 .card_pro_home{
     display: flex;
     height: 274px;
     padding: 8px 32px;
-    width: 100%;
+    width: 320px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -30,15 +35,17 @@
     box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.10);
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
+    flex: 0 0 auto; /* Impede que os cards se expandam */
+  margin-right: 10px;
 }
 .card_pro_home:hover{
     transform: scale(1.05);
     background-color: rgb(250, 4, 250);
 }
 
-.group_cards_pro > button{
+.carrossel > button{
     height: 48px;
-    width: 88px;
+    width: 20px;
     border-radius: 10px;
     border: 0 solid;
 }
@@ -60,4 +67,11 @@
 
 .title_pro{
     font-weight: 700;
+}
+
+.carrossel{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    gap: 16px;
 }
