--- a/orientacao-profissional/src/paginas/profissoes/Profissoes.css
+++ b/orientacao-profissional/src/paginas/profissoes/Profissoes.css
@@ -1,35 +1,49 @@
-.header {
+.container_profissao{
     display: flex;
-    padding: 16px;
-    background-color: gray;
-    height: 16px;
-    gap: 8px;
-    align-items: center;
-    color: #fff;
-    justify-content:center;
-    font-size:24px;
-    font-weight: 700;
-    
+    padding: 80px 140px 80px 140px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+    align-self: stretch; 
+    background: #F0F4F7;  
 }
 
-/* .card{
-    width: 350px;
-    height: 200px;
-    border: solid 1px;
-    border-color: rgb(236, 236, 236);
+.titulo_profissao{
+    color: #000;
+    text-align: center;
+    font-family: Nunito;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;    
+}
+
+.container_conteudo_profissoes{
     display: flex;
     flex-direction: column;
-    gap: 16px;
-    padding: 16px;
-    align-items: center;
-    justify-content: space-evenly;
-    color: black;
-    background-color: rgb(243, 243, 243);
-    border-radius: 10px;
-    box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.10);
-    backdrop-filter: blur(10px);
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;    
 }
 
-.card > span{
+.sub_titulo_visao{
+    font-size: 20px;
+    font-style: normal;
     font-weight: 700;
-} */
+}
+
+ul{
+    padding: 8px 16px;
+}
+
+.container_conhecimentos{
+    display: flex;
+    height: 100%;
+    padding: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+    border-radius: 8px;
+    background: #FFF;
+}
