--- a/orientacao-profissional/src/componentes/carrossel/Carrossel.css
+++ b/orientacao-profissional/src/componentes/carrossel/Carrossel.css
@@ -14,7 +14,7 @@
     gap: 24px;
     align-items: center;
     width: 100%;
-    height: 300px;
+    height: 500px;
     overflow-x: hidden;
     scroll-behavior: smooth;
     transition: scroll 0.5s ease-in-out;
@@ -22,6 +22,7 @@
 }
 
 .card_pro_home{
+ 
     display: flex;
     height: 274px;
     padding: 8px 32px;
@@ -36,7 +37,7 @@
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
     flex: 0 0 auto; /* Impede que os cards se expandam */
-  margin-right: 10px;
+    margin-right: 10px;
 }
 .card_pro_home:hover{
     transform: scale(1.05);
@@ -51,7 +52,9 @@
 }
 
 .img_pro{
-    height: 130px;
+    height: 175px;
+    width: 300px;
+    border-radius: 18px 18px 0px 0px;
 }
 
 .infors{
@@ -75,3 +78,70 @@
     align-items: center;
     gap: 16px;
 }
+
+.cardProf {
+  display: grid;
+  grid-template-columns: 300px;
+  grid-template-rows: 150px 160px 65px;
+  grid-template-areas: "image" "text" "stats";
+  border-radius: 18px;
+  background: white;
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+  font-family: roboto;
+  text-align: center;
+
+  transition: 0.5s ease;
+  cursor: pointer;
+  margin:30px;
+}
+.cardProf:hover {
+  transform: scale(1.15);
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+}
+
+.card-image {
+  grid-area: image;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-size: cover;
+  /* background:url(../../assets/imagens_profissoes/ilustracao.jpg) */
+}
+.card-text {
+  grid-area: text;
+  margin: 25px;
+}
+.card-text .date {
+  color: rgb(7, 32, 255);
+  font-size:13px;
+}
+.card-text p {
+  color: grey;
+  font-size:15px;
+  font-weight: 300;
+}
+.card-text h2 {
+  margin-top:0px;
+  font-size:28px;
+}
+
+.card-stats {
+  grid-area: stats; 
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background: rgb(255, 139, 7);
+}
+
+.card-stats .stat {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  color: white;
+  padding:10px;
+}
+
