--- a/orientacao-profissional/src/paginas/admin/Admin.css
+++ b/orientacao-profissional/src/paginas/admin/Admin.css
@@ -3,7 +3,7 @@
   }
   
   .menu-container {
-    width: 150px;
+    width: 250px;
     height: 100vh;
     background-color: #333;
     color: #fff;
@@ -33,8 +33,9 @@
   .content {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100%;
+    /* align-items: center; */
+    min-height: 500px;
+    padding: 60px;
   }
 
 
@@ -47,8 +48,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    max-width: 400px; /* Ajuste conforme necessário */
+    /* max-width: 400px; Ajuste conforme necessário */
     margin: 0 auto; /* Centralizar o formulário */
+    border-radius: 8px;
+    background: var(--Basic-02, #FFF);
+    box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
+    padding:20px 32px;
+
   }
   
   .form-row {
@@ -57,18 +63,45 @@
     margin-bottom: 10px;
   }
   
+  .tituloCadastro{
+    display: flex;
+    padding: 16px;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 700;
+  }
+
   label {
     margin-bottom: 5px;
   }
   
-  input {
+  .inputDados{
     height: 32px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 5px;
+    padding: 0 5px;
   }
   
+  textarea{
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding: 0 5px;
+  }
+
+  .inputImg{
+    border: none !important;
+    padding: 5px 0px !important;
+  }
+
   .form-buttons {
     display: flex;
+    justify-content: center;
     gap: 10px;
+    padding: 16px;
+  }
+
+  .btn{
+    width: 120px;
+    padding: 8px;
+    cursor: pointer;
   }
