--- a/orientacao-profissional/src/componentes/hero_section_home/Hero_section.css
+++ b/orientacao-profissional/src/componentes/hero_section_home/Hero_section.css
@@ -1,15 +1,25 @@
 .hero_section{
     display: flex;
-    height: 430px;
-    padding: 80px 140px;
+    height: 100%;
+    max-height: 500px;
+    /* padding: 80px 140px; */
     align-items: center;
     gap: 40px;
     align-self: stretch;
     background: #F0F4F7;
 }
 
-.img_hero{
+.containerIMG{
+    width: 90%;
+    /* height: auto; */
+    
+}
 
+.img_hero{
+    transform: rotateY(180deg);
+    width: 100%;
+    min-height: 430px;
+    max-height: 500px;
 }
 
 .hero_container{
@@ -52,7 +62,7 @@
     flex: 1 0 0;
     border-radius: 4px;
     background: #FFF;
-    width: 100%;
+    width: 350px;
     /* Button01 */
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
 }
