--- a/orientacao-profissional/src/index.css
+++ b/orientacao-profissional/src/index.css
@@ -13,6 +13,10 @@
     --textSecundary: #fff;
   }
 
+  a{
+    cursor: pointer;
+  }
+
   body {
     /* display: flex;
     flex-direction: column;
