--- a/orientacao-profissional/src/paginas/login/Login.css
+++ b/orientacao-profissional/src/paginas/login/Login.css
@@ -44,6 +44,7 @@
     display: flex;
     justify-content: center;
     background-image: url(../../componentes/img/guiaProfissao.jpg);
+    min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
