--- a/orientacao-profissional/src/paginas/profissoes/Profissoes.css
+++ b/orientacao-profissional/src/paginas/profissoes/Profissoes.css
@@ -5,7 +5,8 @@
     align-items: flex-start;
     gap: 40px;
     align-self: stretch; 
-    background: #F0F4F7;  
+    background: #F0F4F7; 
+    height: 100vh;
 }
 
 .titulo_profissao{
@@ -38,7 +39,7 @@ ul{
 
 .container_conhecimentos{
     display: flex;
-    height: 100%;
+    min-height: 250px;
     padding: 24px;
     flex-direction: column;
     align-items: flex-start;
