--- a/orientacao-profissional/src/componentes/carrossel/Carrossel.css
+++ b/orientacao-profissional/src/componentes/carrossel/Carrossel.css
@@ -1,12 +1,12 @@
 .section_processes{
     display: flex;
-    padding: 80px;
+    padding: 172px 80px 40px 80px;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    gap: 24px;
+    /* gap: 24px; */
     align-self: stretch;
-    background: rgba(23, 55, 125, 0.10);;
+    background:#E1EDFF;
 }
 
 .group_cards_pro{
@@ -66,6 +66,7 @@
 .title{
     font-size: 36px;
     font-weight: 700;
+    /* color: #FFF; */
 }
 
 .title_pro{
