--- a/orientacao-profissional/src/componentes/hero_section_home/Hero_section.css
+++ b/orientacao-profissional/src/componentes/hero_section_home/Hero_section.css
@@ -1,9 +1,13 @@
 .hero_section{
     display: flex;
-    height: 430px;
-    align-items: flex-start;
-    background: #fff; 
-    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 630px;
+    flex-shrink: 0;
+    background-image: url(./hero_img.png);
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .containerIMG{
@@ -25,8 +29,9 @@
     display: flex;
     padding: 40px 60px;
     flex-direction: column;
-    /* align-items: flex-start; */
+    align-items: center;
     flex: 1 0 0;
+    /* position: absolute; */
 }
 
 .hero_conteudo{
@@ -38,29 +43,40 @@
 
 .box_conteudo{
     display: flex;
+    max-width: 968px;
+    min-width: 60%;
+    padding: 40px 80px;
     flex-direction: column;
-    padding: 40px;
+    position: absolute;
+    top: 500px;
     gap: 24px;
     border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.53);
-    background: rgba(23, 55, 125, 0.20);
-    backdrop-filter: blur(20.100000381469727px); 
-    min-width: 60%;
+    background: rgba(255, 255, 255, 0.78);
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(6.050000190734863px);
+    /* background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(24.100000381469727px);  */
+    margin:0 40px;
 }
 
 .conteudo_titulo{
     color: #000;
-    font-size: 36px;
+    font-size: 30px;
     font-weight: 700;
     line-height: normal;
+}
+
+.conteudo_titulo > span{
+    color: #004FAC;
 }
 
 .opcoes_busca{
     display: flex;
     gap: 16px;
     font-size: 14px;
+    font-weight: 700;
     cursor: pointer;
-    padding: 8px 0px;
+    padding: 16px 0px;
 }
 
 .input_hero{
@@ -95,5 +111,6 @@
 }
 
 .opcoes_busca > a:hover{
-    color: rgb(64, 139, 74);
+    cursor: pointer !important;
+    /* color: rgb(64, 139, 74); */
 }
