--- a/orientacao-profissional/src/componentes/card_profissoes/Card_profissoes.css
+++ b/orientacao-profissional/src/componentes/card_profissoes/Card_profissoes.css
@@ -2,6 +2,7 @@
     display: flex;
     gap: 8px;
     width: 100%;
+    justify-content: space-between
 }
 
 .card_conteudo_pro{
@@ -9,7 +10,7 @@
     flex-direction: column;
     gap: 8px;
     width: 30%;
-    min-width: 300px;
+    /* min-width: 300px; */
     padding: 16px;
     border-radius: 10px;
     box-shadow: 0px 2px 16px 0px rgba(0, 0, 0, 0.10);
