--- a/orientacao-profissional/src/paginas/login/Login.css
+++ b/orientacao-profissional/src/paginas/login/Login.css
@@ -10,6 +10,13 @@
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 13.5px );
     -webkit-backdrop-filter: blur( 13.5px );
+    justify-content: center;
+    height: 250px;
+}
+.bodyAdmin > span{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
 }
 .bodyAdmin > input{
     padding: 16px 8px;
@@ -48,6 +55,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
+    align-items: center;
 }
 
 .caixa-de-texto{
