--- a/orientacao-profissional/src/paginas/admin/Admin.css
+++ b/orientacao-profissional/src/paginas/admin/Admin.css
@@ -4,7 +4,7 @@
   
   .menu-container {
     width: 250px;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #333;
     color: #fff;
     display: flex;
@@ -36,6 +36,7 @@
     /* align-items: center; */
     min-height: 500px;
     padding: 60px;
+    flex-direction: column;
   }
 
 
