--- a/orientacao-profissional/src/paginas/login/Login.css
+++ b/orientacao-profissional/src/paginas/login/Login.css
@@ -26,6 +26,8 @@
 .btns{
     display: flex;
     width: 100%;
+    flex-direction: column;
+    align-items: center;
 }
 
 .btns > button{
@@ -45,6 +47,12 @@
     background-color: rgb(0, 92, 145);
     transition: 1s;
 
+}
+
+.btns > p{
+    text-align: center;
+    color: #c00000;
+    padding: 8px;
 }
 
 .flex-colum{
