--- a/orientacao-profissional/src/paginas/admin/Admin.css
+++ b/orientacao-profissional/src/paginas/admin/Admin.css
@@ -32,14 +32,38 @@
   
   .content {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     /* align-items: center; */
     min-height: 500px;
     padding: 60px;
     flex-direction: column;
+    gap: 16px;
   }
 
+  .linhaBtn{
+    display: flex;
+    justify-content: space-between;
+  }
 
+  .btnCadastrar{
+    display: flex;
+    /* width: 100%; */
+    height: 40px;
+    padding: 10px 16px;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    background-color: var(--primary);
+    color: #fff;
+    font-weight: 700;
+  }
+
+  .btnCadastrar:hover{
+    background-color: rgb(0, 92, 145);
+    transition: 1s;
+
+}
 
 
   /* FORM */
@@ -55,7 +79,7 @@
     background: var(--Basic-02, #FFF);
     box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
     padding:20px 32px;
-
+    box-sizing: border-box;
   }
   
   .form-row {
@@ -101,8 +125,127 @@
     padding: 16px;
   }
 
-  .btn{
+  .btnSalvar{
+    display: flex;
     width: 120px;
-    padding: 8px;
+    height: 40px;
+    padding: 10px 16px;
     cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    background-color: rgb(89, 184, 0);
+    color: #fff;
+    font-weight: 700;
   }
+
+  .btnSalvar:hover{
+    background-color: rgb(68, 141, 0);
+    transition: 1s;
+  }
+
+  .btnCancelar{
+    display: flex;
+    width: 120px;
+    height: 40px;
+    padding: 10px 16px;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: 1px solid #c2c2c2;
+    background-color: transparent;
+    color: #000;
+    font-weight: 700;
+  }
+
+  .btnCancelar:hover{
+    background-color: rgb(226, 226, 226);
+    transition: 1s;
+  }
+
+
+  /*INICIO TABLE CSS*/
+.layoutTable{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 0 32px;
+  width: 100%;
+  height: 700px;
+}
+.thead{
+  display: flex;
+  padding: 8px;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 4.472px 4.472px 0px 0px;
+}
+tbody{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.tbody{
+  display: flex;
+  padding: 12px 8px;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 4px;
+  background: #E6F1F2;
+  /* Button01 */
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+.tbody:hover{
+  opacity: .8;
+}
+.thead > td{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  width: 100%;
+  color: var(--basic-01, #000);
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.tbody > td{
+  color: var(--cinza-06, #393939);
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 100%;
+}
+table{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  max-height: 600px;
+  overflow: auto;
+  padding: 0 8px 0 0;
+}
+
+.icons{
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+.iconEdit:hover{
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+}
+.iconDelet:hover{
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+}
+/*FIM TABLE CSS*/
